--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
         <input type="button" value="submit" id="input_submit" name="submit-task">
     </header>
 
+    <button class="btn_update" name="btn-update-${task.id}">Update</button>    
+    <button class="btn_delete" name="btn-delete-${task.id}">Delete</button>
+
     <ul class="todo_list"></ul>
+    
+
 
     <script defer src="script.js"> </script>
 </body>
