--- a/index.html
+++ b/index.html
@@ -1,30 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Home</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Rubik+Moonrocks&display=swap"
-      rel="stylesheet"
-    />
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Antra Todo Web</title>
     <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
+
+</head>
+
+<body>
     <header class="header">
-        <input type="text" id="input_box" name="input-task">
-        <input type="button" value="submit" id="input_submit" name="submit-task">
+        <input type="text" id="input__box" name="create-task" />
+        <button value="submit" id="input__submit" name="create-task">Submit </button>
     </header>
 
-    <button class="btn_update" name="btn-update-${task.id}">Update</button>    
-    <button class="btn_delete" name="btn-delete-${task.id}">Delete</button>
-
-    <ul class="todo_list"></ul>
-    
-
-
-    <script defer src="script.js"> </script>
+    <div class="task__list"></div>
+    <script type="text/javascript" src="app.js" defer></script>
 </body>
-</html>
+</body>
+
+</html> 
