--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <h1>ToDo-list</h1>
     <header class="header">
         <input type="text" id="input__box" name="create-task" />
         <button value="submit" id="input__submit" name="create-task">Submit </button>
